Major genome browser upgrades